# ConcurrentProgrammingProject

./: .gitlab-ci.yml  README.md  build.gradle  justfile  project.toml  rust-toolchain.toml  settings.gradle  spread-simulator.code-workspace
crates/spread-sim/: Cargo.toml
crates/spread-sim-core/: Cargo.toml
crates/spread-sim-core/src/: lib.rs  model.rs  simulation.rs  validator.rs
crates/spread-sim-core/src/model/: direction.rs  infection_state.rs  output.rs  parameters.rs  partition.rs  person_info.rs  query.rs  rectangle.rs  scenario.rs  statistics.rs  trace.rs  xy.rs
crates/spread-sim-core/src/simulation/: person.rs  utils.rs
crates/spread-sim-rocket/: Cargo.toml
crates/spread-sim-rocket/src/: lib.rs
crates/spread-sim-slug/: Cargo.toml
crates/spread-sim-slug/src/: lib.rs
crates/spread-sim-tests/: Cargo.toml
crates/spread-sim-tests/src/: checker.rs  lib.rs  scenarios.rs  tests.rs
crates/spread-sim-tests/src/tests/: test_correctness.rs  test_slug.rs
crates/spread-sim/src/: main.rs
src/main/java/com/pseuco/cp25/: Simulator.java  package-info.java
src/main/java/com/pseuco/cp25/model/: Direction.java  InfectionState.java  Output.java  Parameters.java  Partition.java  PersonInfo.java  Query.java  Rectangle.java  Scenario.java  Statistics.java  TraceEntry.java  XY.java  package-info.java
src/main/java/com/pseuco/cp25/validator/: DummyValidator.java  InsufficientPaddingException.java  Validator.java  package-info.java
src/test/java/com/pseuco/cp25/: TestRectangle.java
src/test/java/com/pseuco/cp25/tests/: TestCorrectness.java  TestSlug.java
(+19 files in other folders)
