[package]
name = "spread-sim"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
spread-sim-core = { path = "../spread-sim-core" }
spread-sim-rocket = { path = "../spread-sim-rocket" }
spread-sim-slug = { path = "../spread-sim-slug" }